fix to locations align

--- a/styles/main.css
+++ b/styles/main.css
@@ -43,7 +43,7 @@
    border-radius: 10%;
    flex-basis: 20%;
    /* width: 75%; */
-   height: 10em;
+   
 }  
 
 /*fish images*/
@@ -69,14 +69,23 @@ display: flex;
 }
 .location_Card {
    display: flex;
+   flex-direction: column;
    
    /* width: 300px; */
 }
 .location_quote{
    display: flex;
-   justify-content: start;
+   justify-content: center;
+}
+.location_name {
+   display: flex;
+   justify-content: center;
 }
 
 .location__image {
 width: 200px;
+}
+.locations {
+   display: flex;
+   justify-content: space-around;
 }
